# oct25_bmlops_int_accidents

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile.accidents_db  Dockerfile.airflow  Dockerfile.api  Dockerfile.clean_db  Dockerfile.minio  Dockerfile.mlflow  Dockerfile.raw_db  Dockerfile.streamlit  Makefile  README.md  docker-compose.yml  docker-file.yaml  dvc.yaml  main.py  pyproject.toml  requirements-airflow.txt  requirements-api.txt  requirements-mlflow.txt  requirements-streamlit.txt  requirements.txt
.github/: copilot-instructions.md
airflow/config/: .gitkeep  airflow.cfg
airflow/plugins/: .gitkeep
configs/alertmanager/: alertmanager.yml
configs/alertmanager/templates/: email.critical.tmpl  email.default.tmpl  email.warning.tmpl
configs/grafana/provisioning/dashboards/: dashboards.yml  ml_monitoring.json  system_monitoring.json
configs/prometheus/: alert_rules.yml  prometheus.yml
dags/: accidents_dag.py  accidents_data_dag.py  accidents_ml_dag.py  accidents_ml_pipeline.py  accidents_pipeline_dag.py  accidents_training_dag.py
docs/: MONITORING_OPTIMIZATION.md
mlflow/: Dockerfile  mlflow-config.yml  mlflow-server.sh  requirements.txt
notebooks/: README.md  prediction_of_severity.ipynb  predictions-of-severity.ipynb
python_app/src/data/: indigest_kaggle.py
scripts/: accidents_db_seed.sql  airflow-setup.sh  alertmanager-entrypoint.sh  generate_predictions.sh  minio-entrypoint.sh  raw_db_seed.sql
src/api/: main.py
src/api/routers/: auth.py
src/auth/: schemas.py  security.py  users.py
src/data/: build_features.py  clean_data.py  digest.py  download_data.py  explore_sql.py  fetch_data.py  indigest_kaggle.py  ingest_data.py  load_to_db.py  preproccess.py  store_data.py  transform_data.py
src/database/: connection.py
src/models/: config.py  metrics.py  predict_model.py  train_model.py
src/monitoring/: __init__.py  drift.py  drift_reporter.py  explainability.py  metrics.py
src/streamlit/: Home.py  config.py  streamlit_app.py
src/streamlit/.streamlit/: config.toml
src/streamlit/assets/images/: .gitkeep
src/streamlit/components/: __init__.py  auth_form.py  prediction_result.py  severity_legend.py
src/streamlit/pages/: 1_📈_Project_Progress.py  2_🏗️_Architecture.py  3_🧩_Components.py  4_🎯_Prediction.py  4_🧩_Components.py  5_📝_Conclusion.py
src/utils/: __init__.py  data_processing.py  database.py  logging.py  ml_utils.py  model_utils.py  schemas.py
tests/: dummy_artifact.txt  test_mlflow.py
tests/mlruns/0/: meta.yaml
tests/mlruns/117874809427818949/: meta.yaml
tests/mlruns/117874809427818949/6b2f547b60b8446ab1a31afe84dfb118/: meta.yaml
tests/mlruns/117874809427818949/7bcdb99e14c541a1bd1ed19d2eba61f6/: meta.yaml
tests/unit/api/: test_main.py
tests/unit/data/: test_clean_data.py  test_download_data.py  test_ingest_data.py  test_store_data.py
tests/unit/models/: __init__.py  test_predict_model.py
(+7 files in other folders)
